cluster/infra/envoy-system/gateway/manifests/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: envoy-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: &ip 192.168.42.151

  infrastructure:
    annotations:
      lbipam.cilium.io/ips: *ip
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: config

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # noinspection KubernetesUnknownValues
      hostname: &hostname '*.talos.${DOMAIN_NAME}'
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      hostname: *hostname
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-main-tls
