cluster/infra/envoy-system/gateway/manifests/policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-all
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway

  compression:
    - type: Brotli
    - type: Gzip

  connection:
    bufferLimit: 64Mi

  tcpKeepalive: { }

  timeout:
    http:
      requestTimeout: 0s
