cluster/infra/envoy-system/gateway/manifests/redirect-to-https.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect

spec:
  parentRefs:
    - name: envoy
      sectionName: http
    - name: envoy
      sectionName: http-root

  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
