cluster/infra/envoy-system/gateway/manifests/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia
spec:
  targetRefs:
    - group: 'gateway.networking.k8s.io'
      kind: 'Gateway'
      name: envoy

  extAuth:
    failOpen: false
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
      - x-forwarded-host
      - x-forwarded-uri
      - x-forwarded-for
    http:
      backendRefs:
        - group: ''
          kind: Service
          name: authelia
          namespace: kube-auth
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
